1. 新增升冪降冪排序的Function 2. 調整部分按鈕CSS 文字大小 3. 新增標頭欄位
4. 調整makefile 新增id 以利首次排序照者順序排  1~18

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,12 @@ code {
   font-size: 1rem;
   text-align: center;
 }
+
+.centered-select {
+  text-align-last: center;  
+  text-align: center; 
+}
+
+.centered-option {
+  text-align: center;  
+}
